# maxfun-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
migrations/: 20250114.sql  20250115.sql  20250208.sql
src/: main.rs
src/api/: mod.rs
src/api/auth/: logic.rs  mod.rs  schema.rs  view.rs
src/api/common/: logic.rs  schema.rs  view.rs
src/api/detail/: logic.rs  schema.rs  view.rs
src/api/home/: logic.rs  mod.rs  schema.rs  view.rs
src/api/launcher/: logic.rs  mod.rs  schema.rs  view.rs
src/api/profile/: logic.rs  mod.rs  schema.rs  view.rs
src/api/ranking/: logic.rs  schema.rs  view.rs
src/core/: auth.rs  consts.rs  mod.rs  pool.rs  state.rs
src/entity/: evt_balance_log.rs  evt_token_log.rs  evt_trade_log.rs  evt_transfer_log.rs  evt_txn_log.rs  kline_5m.rs  mod.rs  raised_token.rs  token_comment.rs  token_info.rs  token_summary.rs  user.rs  user_avatar.rs  user_summary.rs
src/utility/: error.rs  format.rs  http.rs  jwt.rs  log.rs  mod.rs  resp.rs
