[package]
name = "maxfun-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.4", features = ["tracing"] }
axum-extra = { version = "0.9", features = ["typed-header", "multipart"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2"
jsonwebtoken = "9.3.0"
chrono = "0.4.32"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
dotenvy = "0.15.7"
once_cell = "1.19.0"
ethers = { version = "2.0", features = ["abigen", "rustls"] }
thiserror = "1.0.64"
siwe = "0.6"
sea-orm = { version = "1.0.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
rust_decimal = "1.36.0"
tokio-cron-scheduler = "0.10.2"
itertools = "0.12.0"
redis = { version = "0.24", features = [
    "default",
    "connection-manager",
    "tokio-comp",
    "r2d2",
] }
reqwest = { version = "0.12.7", features = ["json"] }
anyhow = "1.0.89"
csv = "1.3.0"
rand = "0.8.5"
aws-config = "1.5.7"
aws-sdk-s3 = "1.52.0"
aws-credential-types = "1.2.1"
uuid = { version = "1.10.0", features = ["v4"] }
url = "2.5.2"